# unsloppify

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  publish.yml  skill-validate.yml
output-styles/: unsloppified.md
skills/unsloppify/: SKILL.md
skills/unsloppify/references/: examples.md  phrases.md  rubric.md  structures.md
src/unsloppify/: __init__.py  __main__.py  cli.py  engine.py  fixers.py
src/unsloppify/reporters/: __init__.py  github.py  json_.py  text.py
src/unsloppify/rules/: banned_phrases.yaml  punctuation.yaml  sentence_openers.yaml  structures.yaml  vocabulary.yaml
tests/: test_cli.py  test_engine.py  test_fixers.py  test_skill_metadata.py
tests/fixtures/: clean.md  sloppy.md
website/: og-template.html  package.json  pnpm-lock.yaml  svelte.config.js
website/src/: app.css  app.html
website/src/lib/components/: Changelog.svelte  Footer.svelte  Hero.svelte  Install.svelte  Nav.svelte  Pitch.svelte  Rules.svelte  Terminal.svelte
website/src/lib/data/: showcase-rules.js  terminal-script.js
website/src/routes/: +layout.svelte  +page.svelte
