[project]
name = "unsloppify"
version = "0.1.0"
description = "Strip AI slop from prose. CLI + Claude Code skill for hard-locking em dashes, banned phrases, and structural cliches in markdown."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Peter Souter", email = "peter.souter@datadoghq.com" }]
keywords = ["ai", "writing", "prose", "linter", "markdown", "claude", "slop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
unsloppify = "unsloppify.cli:app"

[project.urls]
Homepage = "https://github.com/petems/unsloppify"
Repository = "https://github.com/petems/unsloppify"
Issues = "https://github.com/petems/unsloppify/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unsloppify"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "skills/",
    "output-styles/",
    ".claude-plugin/",
    "README.md",
    "LICENSE",
    "THIRD_PARTY_NOTICES.md",
    "AGENTS.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/unsloppify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
